Add andy's tweet

--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -383,6 +383,9 @@ if (initialExerciseName) {
                 </li>
             </ul>
         </section>
+
+        <blockquote class="twitter-tweet" lang="en"><p>(I&#39;m still looking for an excellent mobile engineering intern this summer! andy@khanacademy.org)</p>&mdash; Andy Matuschak (@andy_matuschak) <a href="https://twitter.com/andy_matuschak/status/557608164435046400">January 20, 2015</a></blockquote>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
     <p class="pubinfo">
