Remove cloudfront links

--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -18,7 +18,7 @@
         <section class="clearfix">
             <div class="media-container right inset" style="width: 180px">
                 <a href="https://www.khanacademy.org/profile/kasrak">
-                    <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/badge.png" class="right" width="100" height="117">
+                    <img src="img/badge.png" class="right" width="100" height="117">
                 </a>
             </div>
 
@@ -35,7 +35,7 @@
             </p>
 
             <div class="media-container center">
-                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/khan-website.png" width="720" height="437">
+                <img src="img/khan-website.png" width="720" height="437">
             </div>
 
             <p>
@@ -64,12 +64,12 @@
                 </div>
                 <div class="video-player">
                     <div class="fake-ipad">
-                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-0.png"
+                        <video poster="img/related-videos-0.png"
                                width="384" height="512"
                                loop>
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-0.webm"
+                               <source src="img/related-videos-0.webm"
                                        type="video/webm">
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-0.mp4"
+                               <source src="img/related-videos-0.mp4"
                                        type="video/mp4">
                         </video>
                     </div>
@@ -93,12 +93,12 @@
                 </div>
                 <div class="video-player">
                     <div class="fake-ipad">
-                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-free-docking.png"
+                        <video poster="img/related-videos-free-docking.png"
                                width="384" height="512"
                                loop>
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-free-docking.webm"
+                               <source src="img/related-videos-free-docking.webm"
                                        type="video/webm">
-                               <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-free-docking.mp4"
+                               <source src="img/related-videos-free-docking.mp4"
                                        type="video/mp4">
                         </video>
                     </div>
@@ -110,12 +110,12 @@
             <p>I spent a lot of time playing with these prototypes. I noticed that if your finger wasn't centered in the video view when docking the video, the finger would become detached from the video as it shrunk, ruining the illusion of direct manipulation. I fixed this by setting the view's anchor point to the touch position, which makes the view shrink around the user's finger&mdash;a simple change that prevents limb-view detachment. See for yourself:</p>
 
             <div class="video-player">
-                    <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-anchor-combined.png"
+                    <video poster="img/related-videos-anchor-combined.png"
                            width="720" height="458"
                            loop>
-                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-anchor-combined.webm"
+                           <source src="img/related-videos-anchor-combined.webm"
                                    type="video/webm">
-                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/related-videos-anchor-combined.mp4"
+                           <source src="img/related-videos-anchor-combined.mp4"
                                    type="video/mp4">
                     </video>
                     <div class="media-caption left half">
@@ -141,7 +141,7 @@
             <p>My next project was to make a native version of the exercise scratchpad. A lot of students use the scratchpad on the website to do rough work, even though writing with
             a mouse can be painful, so we knew it was a valuable feature, and that we could provide a far better experience on a touch device. This ended up being my biggest project.</p>
 
-            <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-view-sandwich.png" width="182" height="160" class="scratchpad-view-sandwich">
+            <img src="img/scratchpad-view-sandwich.png" width="182" height="160" class="scratchpad-view-sandwich">
 
             <p>It was decided early on during the development of the app that exercise content would be rendered in a web view&mdash;it was the only feasible way to bring hundreds of exercises with the resources we had. This meant the scratchpad canvas
             (a native view) would cover the webview rendering the exercise.</p>
@@ -151,12 +151,12 @@
             <div class="media-container center">
                 <div class="fake-ipad">
                     <div class="video-player">
-                        <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-full.png"
+                        <video poster="img/scratchpad-full.png"
                                width="512" height="254"
                                loop>
-                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-full.webm"
+                           <source src="img/scratchpad-full.webm"
                                    type="video/webm">
-                           <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/scratchpad-full.mp4"
+                           <source src="img/scratchpad-full.mp4"
                                    type="video/mp4">
                         </video>
                         <div class="play-button"></div>
@@ -221,12 +221,12 @@
             Here are some of them.</p>
 
             <div class="media-container center">
-                <video poster="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.png"
+                <video poster="img/exercise-progression.png"
                        autoplay loop
                        width="444" height="82" class="tap-to-play">
-                       <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.webm"
+                       <source src="img/exercise-progression.webm"
                                type="video/webm">
-                       <source src="http://dcv5tqec9187e.cloudfront.net/khan-internship/exercise-progression.mp4"
+                       <source src="img/exercise-progression.mp4"
                                type="video/mp4">
                 </video>
                 <div class="media-caption" style="width: 400px">
@@ -305,15 +305,15 @@
             </p>
 
             <div class="media-container center" style="position: relative">
-                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/question-mark.png"
+                <img src="img/question-mark.png"
                      style="position: absolute; bottom: 70px; right: 50px;"
                      class="clickable overlay-toggle"
                      onclick="toggleOverlayWithId('customSchemeOverlay')">
-                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/custom-scheme.png" width="720" height="443">
+                <img src="img/custom-scheme.png" width="720" height="443">
             </div>
 
             <div id="customSchemeOverlay" class="overlay" style="margin-top: -55px">
-                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/overlay-arrow.png" class="overlay-arrow" style="right: 56px">
+                <img src="img/overlay-arrow.png" class="overlay-arrow" style="right: 56px">
                 <p>
                 It uses a custom scheme that sets an environment variable with
                 the name of the exercise to load on launch.
@@ -339,7 +339,7 @@ if (initialExerciseName) {
             <h2>Thank you!</h2>
 
             <div class="media-container center">
-                <img src="http://dcv5tqec9187e.cloudfront.net/khan-internship/knowledge.png" width="718" height="112"
+                <img src="img/knowledge.png" width="718" height="112"
                      class="shadow-frame">
                 <div class="media-caption">
                     Learning in progress.
@@ -383,14 +383,11 @@ if (initialExerciseName) {
                 </li>
             </ul>
         </section>
-
-        <blockquote class="twitter-tweet" lang="en"><p>(I&#39;m still looking for an excellent mobile engineering intern this summer! andy@khanacademy.org)</p>&mdash; Andy Matuschak (@andy_matuschak) <a href="https://twitter.com/andy_matuschak/status/557608164435046400">January 20, 2015</a></blockquote>
-        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
     <p class="pubinfo">
         Thanks to <a href="http://leila.cc/">Leila</a> and <a href="http://nickdirienzo.com/">Nick</a> for reading drafts of this post.<br>
-        Published January 20, 2014.
+        Published January 20, 2015.
     </p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.3/fastclick.min.js"></script>
