Add link to medium post (Putting a Database in Everyone's Pocket)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
         <ol class="posts">
             <li>
+                <a href="https://medium.com/@kasrak/putting-a-database-in-everyone-s-pocket-6e9fc1ec2bc4">Putting a Database in Everyone's Pocket</a>
+                <span class="pubdate">Dec 21, 2015</span>
+            </li>
+            <li>
                 <a href="khan-internship">My internship at Khan Academy</a>
                 <span class="pubdate">Jan 20, 2015</span>
             </li>
